--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge§
+title: TomRijntjes.nl
+description: tech & writing
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
