--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge§
 title: Tom's Blog
-description: tech & writing
-remote_theme: pages-themes/tactile@v0.2.0
+description: Cloud Engineer
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
