--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,5 @@ description: Cloud Engineer
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+github:
+  is_user_page: false
