--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge§
-title: Tom's Blog
+title: Tom Rijntjes
 description: Cloud Engineer
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
