--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,10 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge§
-title: Tom's Blog
-description: tech & writing
+title: Tom Rijntjes
+description: Cloud Engineer
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+github:
+  is_user_page: false
